Adding the contact me and the footer with some js

--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ section {
   align-items: center;
   z-index: 100;
 }
+
+.header .sticky {
+  border-bottom: 0.1rem solid rgba(0, 0, 0, 0.2);
+}
 .logo {
   font-size: 2.5rem;
   color: var(--text-color);
@@ -262,4 +266,69 @@ span {
 }
 .portfolio-layer a i {
   font-size: 2rem;
+  color: var(--second-bg-color);
+}
+
+.contact h2 {
+  margin-bottom: 3rem;
+}
+.contact-form {
+  max-width: 70rem;
+  margin: 3rem auto;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+.contact-form .input box {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.contact-form .input-box input,
+.contact-form textarea {
+  width: 100%;
+  padding: 1.5rem;
+  font-size: 1.6rem;
+  color: var(--text-color);
+  background: var(--second-bg-color);
+  border-radius: 0.8rem;
+  margin: 0.7rem 0;
+}
+.contact-form .input-box input {
+  width: 49%;
+}
+
+.contact-form textarea {
+  resize: none;
+}
+
+.contact-form .btn {
+  cursor: pointer;
+  margin-top: 2rem;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 2rem 9%;
+  background: var(--second-bg-color);
+}
+.footer-text p {
+  font-size: 1.6rem;
+}
+.footer-iconTop a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.8rem;
+  background: var(--main-color);
+  border-radius: 0.8rem;
+  transition: 0.5s ease;
+}
+
+.footer-iconTop a i {
+  font-size: 2.4rem;
+  color: var(--second-bg-color);
 }
