--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ html {
 body {
   background: var(--bg-color);
   color: var(--text-color);
+  max-width: 1600px;
 }
 section {
   min-height: 100vh;
@@ -69,6 +70,7 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 5rem;
 }
 .home-img img {
   width: 25vw;
@@ -87,7 +89,7 @@ section {
   }
 }
 .home-content h3 {
-  font-size: 3.2 rem;
+  font-size: 3.2rem;
   font-weight: 700;
 }
 
