--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ span {
   justify-content: center;
   align-items: center;
   gap: 2rem;
+  position: relative;
   background: var(--second-bg-color);
 }
 .about-img img {
@@ -171,6 +172,26 @@ span {
 .about-content p {
   font-size: 1.6rem;
   margin: 2rem 0 3rem;
+}
+
+.show {
+  position: fixed;
+  right: 10%;
+  top: 15%;
+  font-size: 2.6rem;
+  width: 100vw;
+  max-width: 400px;
+  z-index: 4;
+  background: var(--bg-color);
+  display: none;
+  padding: 2rem;
+}
+.about-flex {
+  justify-content: space-between;
+  display: flex;
+}
+#about-icon {
+  padding-top: 10px;
 }
 
 .services h2 {
@@ -291,11 +312,6 @@ span {
   margin: 3rem auto;
   text-align: center;
   margin-bottom: 3rem;
-}
-.contact-form .input box {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
 }
 
 .contact-form .input-box input,
