--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@
   scroll-behavior: smooth;
 }
 :root {
-  --bg-color: #1f242d;
+  --bg-color: #ffffff;
   --second-bg-color: #323946;
-  --text-color: #fff;
-  --main-color: #3e3eda;
+  --text-color: #000010;
+  --main-color: red;
 }
 html {
-  font-size: 62.5%;
+  font-size: 72.5%;
   /* overflow: hidden; */
 }
 
@@ -72,11 +72,7 @@ section {
   align-items: center;
   gap: 5rem;
 }
-.home-img img {
-  width: 25vw;
-  height: 40vh;
-  animation: floatImage 4s ease-in-out infinite;
-}
+
 @keyframes floatImage {
   0% {
     transform: translateY(0);
@@ -107,26 +103,7 @@ span {
 
 .home-content p {
   font-size: 1.6rem;
-}
-
-.social-media a {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  height: 4rem;
-  width: 4rem;
-  background: transparent;
-  border: 0.2rem solid var(--main-color);
-  border-radius: 50%;
-  font-size: 2rem;
-  color: var(--main-color);
-  margin: 3rem 1.5rem 3rem 0;
-}
-
-.social-media a:hover {
-  background: var(--main-color);
-  color: var(--second-bg-color);
-  box-shadow: 0 0 1rem var(--main-color);
+  margin: 1rem;
 }
 
 .btn {
@@ -136,11 +113,13 @@ span {
   border-radius: 4rem;
   font-size: 1.6rem;
   box-shadow: 0 0 1rem var(--main-color);
-  color: var(--second-bg-color);
+  color: rgb(206, 186, 186);
   transition: 0.5 ease;
+  margin-top: 1rem;
 }
 .btn:hover {
   box-shadow: none;
+  color: white;
 }
 
 .about {
@@ -149,7 +128,7 @@ span {
   align-items: center;
   gap: 2rem;
   position: relative;
-  background: var(--second-bg-color);
+  background: var(--bg-color);
 }
 .about-img img {
   width: 25vw;
@@ -174,18 +153,6 @@ span {
   margin: 2rem 0 3rem;
 }
 
-.show {
-  position: fixed;
-  right: 10%;
-  top: 15%;
-  font-size: 2.6rem;
-  width: 100vw;
-  max-width: 400px;
-  z-index: 4;
-  background: var(--bg-color);
-  display: none;
-  padding: 2rem;
-}
 .about-flex {
   justify-content: space-between;
   display: flex;
@@ -193,47 +160,8 @@ span {
 #about-icon {
   padding-top: 10px;
 }
-
-.services h2 {
-  margin-bottom: 5rem;
-}
-.service-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 2rem;
-}
-.service-container .service-box {
-  flex: 1 1 30rem;
-  background: var(--second-bg-color);
-  padding: 3rem 2rem 4rem;
-  border-radius: 2rem;
-  text-align: center;
-  border: 0.2rem solid var(--bg-color);
-  transition: 0.5s ease;
-}
-
-.service-container .service-box:hover {
-  border-color: var(--main-color);
-  transform: scale(1.02);
-}
-.service-box i {
-  font-size: 7rem;
-  color: var(--main-color);
-}
-
-.service-box h3 {
-  font: 2.6rem;
-}
-
-.service-box p {
-  font-size: 1.6rem;
-  margin: 2rem 0 3rem;
-}
-
 .portfolio {
-  background: var(--second-bg-color);
+  background: var(--bg-color);
 }
 
 .portfolio h2 {
@@ -304,46 +232,17 @@ span {
   color: var(--second-bg-color);
 }
 
-.contact h2 {
-  margin-bottom: 3rem;
-}
-.contact-form {
-  max-width: 70rem;
-  margin: 3rem auto;
-  text-align: center;
-  margin-bottom: 3rem;
-}
-
-.contact-form .input-box input,
-.contact-form textarea {
-  width: 100%;
-  padding: 1.5rem;
-  font-size: 1.6rem;
-  color: var(--text-color);
-  background: var(--second-bg-color);
-  border-radius: 0.8rem;
-  margin: 0.7rem 0;
-}
-.contact-form .input-box input {
-  width: 49%;
-}
-
-.contact-form textarea {
-  resize: none;
-}
-
-.contact-form .btn {
-  cursor: pointer;
-  margin-top: 2rem;
-}
-
 .footer {
   display: flex;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  padding: 2rem 9%;
-  background: var(--second-bg-color);
+  padding: 0.1rem 9%;
+  background: var(--bg-color);
 }
 .footer-text p {
   font-size: 1.6rem;
@@ -361,6 +260,31 @@ span {
 .footer-iconTop a i {
   font-size: 2.4rem;
   color: var(--second-bg-color);
+}
+
+.social-media {
+  height: fit-content;
+  padding: 0;
+  margin: 0;
+}
+.social-media a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  height: 4rem;
+  width: 4rem;
+  background: transparent;
+  border: 0.2rem solid var(--main-color);
+  border-radius: 50%;
+  font-size: 2rem;
+  color: var(--main-color);
+  margin: 3rem 1.5rem 3rem 0;
+}
+
+.social-media a:hover {
+  background: var(--main-color);
+  color: var(--second-bg-color);
+  box-shadow: 0 0 1rem var(--main-color);
 }
 
 /* BREAKPOINTS */
@@ -387,7 +311,7 @@ span {
     min-height: auto;
   }
   .footer {
-    padding: 2rem 3%;
+    padding: 0.1rem 3%;
   }
 }
 
